--- a/digiwf-json-serialization/pom.xml
+++ b/digiwf-json-serialization/pom.xml
@@ -15,9 +15,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.erosb</groupId>
-            <artifactId>everit-json-schema</artifactId>
-            <version>1.14.0</version>
+            <groupId>io.muenchendigital.digiwf</groupId>
+            <artifactId>digiwf-json-schema</artifactId>
+            <version>0.0.1</version>
         </dependency>
 
         <dependency>
