--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Advance Security Compliance Action
+        uses: GeekMasher/advanced-security-compliance@v1.6
+        with:
+          policy: GeekMasher/security-queries
+          policy-path: policies/default.yml
+
+          token: ${{ secrets.ACCESS_TOKEN }}
+
+          argvs: '--disable-dependabot --disable-secret-scanning --disable-code-scanning'
+
+    steps:
+      needs: compliance
       - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
