--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,9 +3,9 @@ name: build and test
 on: [push]
 
 jobs:
-  build:
+  compliance:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -20,8 +20,10 @@ jobs:
 
           argvs: '--disable-dependabot --disable-secret-scanning --disable-code-scanning'
 
-    steps:
-      needs: compliance
+  build:
+    needs: compliance
+    runs-on: ubuntu-latest
+    steps:     
       - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
