--- a/digiwf-json-serialization-starter/pom.xml
+++ b/digiwf-json-serialization-starter/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <artifactId>digiwf-json-serialization-starter</artifactId>
-    <name>starter</name>
+    <name>digiwf-json-serialization-starter</name>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
