--- a/digiwf-json-serialization/pom.xml
+++ b/digiwf-json-serialization/pom.xml
@@ -10,14 +10,14 @@
     <parent>
         <groupId>io.muenchendigital.digiwf</groupId>
         <artifactId>digiwf-json-serialization-parent</artifactId>
-        <version>0.0.5</version>
+        <version>0.1.0</version>
     </parent>
 
     <dependencies>
         <dependency>
-            <groupId>io.muenchendigital.digiwf</groupId>
-            <artifactId>digiwf-json-schema</artifactId>
-            <version>0.0.1</version>
+            <groupId>com.github.erosb</groupId>
+            <artifactId>everit-json-schema</artifactId>
+            <version>1.14.1</version>
         </dependency>
 
         <dependency>
